--- a/Assignment/AIMLCEP_Q2.ipynb
+++ b/Assignment/AIMLCEP_Q2.ipynb
@@ -33,7 +33,7 @@
         "id": "dE9sqluEjGoz"
       },
       "source": [
-        "#Solution to Assignment question (Q2-a)"
+        "## **Solution to Assignment question (Q2-a)**"
       ]
     },
     {
@@ -3533,7 +3533,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **Implementing the Logistic Regresssion Model**"
+        "## **Solution to Assignment question (Q2-b)**"
+      ],
+      "metadata": {
+        "id": "TN9W7sQREvVA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **Implementing the Logistic Regresssion Model**"
       ],
       "metadata": {
         "id": "tL7XnXl5Eby_"
@@ -3855,7 +3864,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# ===================================================================="
+        "### ===================================================================="
       ],
       "metadata": {
         "id": "ozLZNkAJQbnO"
@@ -3864,7 +3873,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Implementing the Naive Bayes Classifier**"
+        "### **Implementing the Naive Bayes Classifier**"
       ],
       "metadata": {
         "id": "qtM5U42pQToA"
@@ -4987,7 +4996,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **=================================================================**"
+        "### **=================================================================**"
       ],
       "metadata": {
         "id": "ozPb7P_ZfTYF"
@@ -4996,7 +5005,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Implementing the Soft Margin SVM**"
+        "### **Implementing the Soft Margin SVM**"
       ],
       "metadata": {
         "id": "h5J93mCUffcJ"
@@ -5039,11 +5048,11 @@
         "print('test_label:', test_label.shape,'Type: ',  type(test_label))"
       ],
       "metadata": {
-        "id": "PVLv85602F_Y",
-        "outputId": "80a5e994-10d9-4ef7-efcb-ae772b0f27dc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PVLv85602F_Y",
+        "outputId": "80a5e994-10d9-4ef7-efcb-ae772b0f27dc"
       },
       "execution_count": 114,
       "outputs": [
@@ -5069,11 +5078,11 @@
         "predicted_labels = clf_model.predict(test_features)\n"
       ],
       "metadata": {
-        "id": "QkKnXH4n2jHx",
-        "outputId": "4464069f-69a8-452e-c8f8-04a17eeb277f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QkKnXH4n2jHx",
+        "outputId": "4464069f-69a8-452e-c8f8-04a17eeb277f"
       },
       "execution_count": 115,
       "outputs": [
@@ -5112,11 +5121,11 @@
         "print('test set accuracy:', test_accuracy)    "
       ],
       "metadata": {
-        "id": "F-uJN8-i34H0",
-        "outputId": "62c7f9f3-5dce-4a5e-8100-8cf391f4e14c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "F-uJN8-i34H0",
+        "outputId": "62c7f9f3-5dce-4a5e-8100-8cf391f4e14c"
       },
       "execution_count": 118,
       "outputs": [
@@ -5144,11 +5153,11 @@
         "print('train set accuracy:', train_accuracy)"
       ],
       "metadata": {
-        "id": "JSzYZuICDAAG",
-        "outputId": "80c05f0b-ede1-4216-c3bb-4ae3ed50f028",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JSzYZuICDAAG",
+        "outputId": "80c05f0b-ede1-4216-c3bb-4ae3ed50f028"
       },
       "execution_count": 119,
       "outputs": [
@@ -5173,11 +5182,11 @@
         "print(cm_test)"
       ],
       "metadata": {
-        "id": "c8NdniIaDFMJ",
-        "outputId": "e8c0cfcc-be52-4f39-ef5f-629202d41429",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "c8NdniIaDFMJ",
+        "outputId": "e8c0cfcc-be52-4f39-ef5f-629202d41429"
       },
       "execution_count": 120,
       "outputs": [
@@ -5214,12 +5223,12 @@
         "fig.suptitle('Confusion Matrix')"
       ],
       "metadata": {
-        "id": "y0YwRz52DJ1C",
-        "outputId": "b1f879dd-a93a-4e59-8559-f96927cc2e79",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 251
-        }
+        },
+        "id": "y0YwRz52DJ1C",
+        "outputId": "b1f879dd-a93a-4e59-8559-f96927cc2e79"
       },
       "execution_count": 121,
       "outputs": [
@@ -5259,11 +5268,11 @@
         "print(test_cr)"
       ],
       "metadata": {
-        "id": "j19H-UcODOGD",
-        "outputId": "bb7d29e5-291d-4a7d-eaf9-166511c83d38",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "j19H-UcODOGD",
+        "outputId": "bb7d29e5-291d-4a7d-eaf9-166511c83d38"
       },
       "execution_count": 122,
       "outputs": [
@@ -5311,6 +5320,15 @@
       ],
       "metadata": {
         "id": "EZ6n1_gDDaQ4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Here we will implement the decision Tree classifier"
+      ],
+      "metadata": {
+        "id": "AxdJR0K4F7XF"
       }
     }
   ]
