--- a/Assignment/AIMLCEP_Q3.ipynb
+++ b/Assignment/AIMLCEP_Q3.ipynb
@@ -65,12 +65,12 @@
         "sample_data"
       ],
       "metadata": {
-        "id": "-LPtjcEF7gN8",
-        "outputId": "138ca00e-5eee-4b64-dfc8-dd1c81565802",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 487
-        }
+        },
+        "id": "-LPtjcEF7gN8",
+        "outputId": "138ca00e-5eee-4b64-dfc8-dd1c81565802"
       },
       "execution_count": 33,
       "outputs": [
@@ -1220,11 +1220,11 @@
         "print(y)"
       ],
       "metadata": {
-        "id": "lRaN4RAYGDiI",
-        "outputId": "da905ed5-de18-46bf-f064-0d7cc6b03c2e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "lRaN4RAYGDiI",
+        "outputId": "da905ed5-de18-46bf-f064-0d7cc6b03c2e"
       },
       "execution_count": 36,
       "outputs": [
@@ -1269,25 +1269,40 @@
         "from sklearn.model_selection import train_test_split\n",
         "# split into train test sets\n",
         "X_train, X_test, y_train, y_test = train_test_split(X,y, test_size=0.2)\n",
-        "print(X_train.shape, X_test.shape, y_train.shape, y_test.shape)"
+        "print('Shape of Train data feature: ', X_train.shape)\n",
+        "print('Shape of Train data Label: ', y_train.shape)\n",
+        "print('Shape of Test data feature: ', X_test.shape)\n",
+        "print('Shape of Test data Label: ',y_test.shape)"
       ],
       "metadata": {
-        "id": "kZ_S9ZT8DFhi",
-        "outputId": "4274824a-0743-40d3-bb09-8ecc5fc6c738",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kZ_S9ZT8DFhi",
+        "outputId": "3cf1ba43-b8fc-4b55-956c-dad5315306f7"
       },
-      "execution_count": 37,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "(19200, 784) (4800, 784) (19200,) (4800,)\n"
+            "Shape of Train data feature:  (19200, 784)\n",
+            "Shape of Train data Label:  (19200,)\n",
+            "Shape of Test data feature:  (4800, 784)\n",
+            "Shape of Test data Label:  (4800,)\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "Yc82t7BCMoAy"
+      }
     },
     {
       "cell_type": "code",
