--- a/Assignment/AIMLCEP_Q3.ipynb
+++ b/Assignment/AIMLCEP_Q3.ipynb
@@ -1269,19 +1269,96 @@
         "from sklearn.model_selection import train_test_split\n",
         "# split into train test sets\n",
         "X_train, X_test, y_train, y_test = train_test_split(X,y, test_size=0.2)\n",
-        "print('Shape of Train data feature: ', X_train.shape)\n",
-        "print('Shape of Train data Label: ', y_train.shape)\n",
-        "print('Shape of Test data feature: ', X_test.shape)\n",
-        "print('Shape of Test data Label: ',y_test.shape)"
+        "print('Train data feature: ', X_train)\n",
+        "print('Train data Label: ', y_train)\n",
+        "print('Test data feature: ', X_test)\n",
+        "print('Test data Label: ',y_test)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "kZ_S9ZT8DFhi",
-        "outputId": "3cf1ba43-b8fc-4b55-956c-dad5315306f7"
+        "outputId": "fa6f7338-dc39-452e-bc31-062c46ffa719"
       },
-      "execution_count": 38,
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Train data feature:         feature0  feature1  feature2  ...  feature781  feature782  feature783\n",
+            "22427         0         0         0  ...           0           0           0\n",
+            "6             0         0         0  ...           0           0           0\n",
+            "20810         0         0         0  ...           0           0           0\n",
+            "11931         0         0         0  ...           0           0           0\n",
+            "255           0         0         0  ...           0           0           0\n",
+            "...         ...       ...       ...  ...         ...         ...         ...\n",
+            "8269          0         0         0  ...           0           0           0\n",
+            "4691          0         0         0  ...           0           0           0\n",
+            "6481          0         0         0  ...           0           0           0\n",
+            "15661         0         0         0  ...           0           0           0\n",
+            "7850          0         0         0  ...           0           0           0\n",
+            "\n",
+            "[19200 rows x 784 columns]\n",
+            "Train data Label:  22427    4\n",
+            "6        3\n",
+            "20810    3\n",
+            "11931    4\n",
+            "255      4\n",
+            "        ..\n",
+            "8269     2\n",
+            "4691     4\n",
+            "6481     2\n",
+            "15661    2\n",
+            "7850     3\n",
+            "Name: label, Length: 19200, dtype: int64\n",
+            "Test data feature:         feature0  feature1  feature2  ...  feature781  feature782  feature783\n",
+            "6691          0         0         0  ...           0           0           0\n",
+            "12458         0         0         0  ...           0           0           0\n",
+            "10359         0         0         0  ...           0           0           0\n",
+            "9048          0         0         0  ...           0           0           0\n",
+            "6989          0         0         0  ...           0           0           0\n",
+            "...         ...       ...       ...  ...         ...         ...         ...\n",
+            "883           0         0         0  ...           0           0           0\n",
+            "15084         0         0         0  ...           0           0           0\n",
+            "18261         0         0         0  ...           0           0           0\n",
+            "18208         0         0         0  ...           0           0           0\n",
+            "19260         0         0         0  ...           0           0           0\n",
+            "\n",
+            "[4800 rows x 784 columns]\n",
+            "Test data Label:  6691     4\n",
+            "12458    3\n",
+            "10359    4\n",
+            "9048     1\n",
+            "6989     2\n",
+            "        ..\n",
+            "883      4\n",
+            "15084    1\n",
+            "18261    2\n",
+            "18208    1\n",
+            "19260    1\n",
+            "Name: label, Length: 4800, dtype: int64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('Shape of Train data feature: ', X_train.shape)\n",
+        "print('Shape of Train data Label: ', y_train.shape)\n",
+        "print('Shape of Test data feature: ', X_test.shape)\n",
+        "print('Shape of Test data Label: ',y_test.shape)"
+      ],
+      "metadata": {
+        "id": "PCCyJV5WOMyF",
+        "outputId": "e428b40b-94e9-454e-f3d2-e1c6d3df7640",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
@@ -1294,6 +1371,37 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **===========================================================**"
+      ],
+      "metadata": {
+        "id": "RRkZorf0NXZ4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Q3.b Train a multi-layer perceptron (MLP)**"
+      ],
+      "metadata": {
+        "id": "LL6zqEOoNutR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Q3.b : [C, R] Use the train partition to train a multi-layer perceptron (MLP) with an input layer, 3\n",
+        "hidden layers and an output layer. You are free to choose the number of neurons and their ac-\n",
+        "tivation functions in the hidden layers. Use a soft-max at the output layer and a cross-entropy\n",
+        "loss function to perform classifcation. Describe the MLP architecture you have used. Using the\n",
+        "MLP model, report the accuracy, precision, recall, F1 score for the train set and test set."
+      ],
+      "metadata": {
+        "id": "OxJzqXozNi_m"
+      }
     },
     {
       "cell_type": "markdown",
