--- a/Assignment/AIMLCEP_Q3.ipynb
+++ b/Assignment/AIMLCEP_Q3.ipynb
@@ -58,7 +58,7 @@
         "import matplotlib.pyplot as plt #the matplotlib library is useful for plotting purposes\n",
         "\n",
         "#Get the data from the csv file \n",
-        "sample_data = pd.read_csv('Q3_data.csv', index_col=False)\n",
+        "sample_data = pd.read_csv('https://github.com/arvind-maurya/MachineLearning/blob/master/Assignment/Q3/Q3_data.csv?raw=true', index_col=False)\n",
         "\n",
         "\n",
         "#print the data \n",
@@ -70,16 +70,16 @@
           "height": 487
         },
         "id": "-LPtjcEF7gN8",
-        "outputId": "138ca00e-5eee-4b64-dfc8-dd1c81565802"
+        "outputId": "540c18b5-93d6-4fa0-8973-c703df4ef8b0"
       },
-      "execution_count": 33,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-a5ec468a-a655-4248-a640-4659b32c65df\">\n",
+              "  <div id=\"df-6fbede8a-5b58-47cb-950e-4a5a11f43de2\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1111,7 +1111,7 @@
               "</table>\n",
               "<p>24000 rows × 785 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a5ec468a-a655-4248-a640-4659b32c65df')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6fbede8a-5b58-47cb-950e-4a5a11f43de2')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1162,12 +1162,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-a5ec468a-a655-4248-a640-4659b32c65df button.colab-df-convert');\n",
+              "          document.querySelector('#df-6fbede8a-5b58-47cb-950e-4a5a11f43de2 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-a5ec468a-a655-4248-a640-4659b32c65df');\n",
+              "          const element = document.querySelector('#df-6fbede8a-5b58-47cb-950e-4a5a11f43de2');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1206,7 +1206,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 51
         }
       ]
     },
@@ -1224,9 +1224,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lRaN4RAYGDiI",
-        "outputId": "da905ed5-de18-46bf-f064-0d7cc6b03c2e"
+        "outputId": "4df88b53-559e-4a3e-cfe1-50fb7ccfb5e4"
       },
-      "execution_count": 36,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
@@ -1279,65 +1279,65 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kZ_S9ZT8DFhi",
-        "outputId": "fa6f7338-dc39-452e-bc31-062c46ffa719"
+        "outputId": "db33d8c9-debd-46f6-da5c-a76288c80c5c"
       },
-      "execution_count": 41,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Train data feature:         feature0  feature1  feature2  ...  feature781  feature782  feature783\n",
-            "22427         0         0         0  ...           0           0           0\n",
-            "6             0         0         0  ...           0           0           0\n",
-            "20810         0         0         0  ...           0           0           0\n",
-            "11931         0         0         0  ...           0           0           0\n",
-            "255           0         0         0  ...           0           0           0\n",
+            "19826         0         0         0  ...           0           0           0\n",
+            "17233         0         0         0  ...           0           0           0\n",
+            "498           0         0         0  ...           0           0           0\n",
+            "6967          0         0         0  ...           0           0           0\n",
+            "17532         0         0         0  ...           0           0           0\n",
             "...         ...       ...       ...  ...         ...         ...         ...\n",
-            "8269          0         0         0  ...           0           0           0\n",
-            "4691          0         0         0  ...           0           0           0\n",
-            "6481          0         0         0  ...           0           0           0\n",
-            "15661         0         0         0  ...           0           0           0\n",
-            "7850          0         0         0  ...           0           0           0\n",
+            "10051         0         0         0  ...           0           0           0\n",
+            "12393         0         0         0  ...           0           0           0\n",
+            "6497          0         0         0  ...           0           0           0\n",
+            "7222          0         0         0  ...           0           0           0\n",
+            "17148         0         0         0  ...           0           0           0\n",
             "\n",
             "[19200 rows x 784 columns]\n",
-            "Train data Label:  22427    4\n",
-            "6        3\n",
-            "20810    3\n",
-            "11931    4\n",
-            "255      4\n",
+            "Train data Label:  19826    3\n",
+            "17233    2\n",
+            "498      3\n",
+            "6967     4\n",
+            "17532    1\n",
             "        ..\n",
-            "8269     2\n",
-            "4691     4\n",
-            "6481     2\n",
-            "15661    2\n",
-            "7850     3\n",
+            "10051    4\n",
+            "12393    2\n",
+            "6497     2\n",
+            "7222     3\n",
+            "17148    1\n",
             "Name: label, Length: 19200, dtype: int64\n",
             "Test data feature:         feature0  feature1  feature2  ...  feature781  feature782  feature783\n",
-            "6691          0         0         0  ...           0           0           0\n",
-            "12458         0         0         0  ...           0           0           0\n",
-            "10359         0         0         0  ...           0           0           0\n",
-            "9048          0         0         0  ...           0           0           0\n",
-            "6989          0         0         0  ...           0           0           0\n",
+            "12233         0         0         0  ...           0           0           0\n",
+            "15590         0         0         0  ...           0           0           0\n",
+            "2990          0         0         0  ...           0           0           0\n",
+            "22271         0         0         0  ...           0           0           0\n",
+            "2656          0         0         0  ...           0           0           0\n",
             "...         ...       ...       ...  ...         ...         ...         ...\n",
-            "883           0         0         0  ...           0           0           0\n",
-            "15084         0         0         0  ...           0           0           0\n",
-            "18261         0         0         0  ...           0           0           0\n",
-            "18208         0         0         0  ...           0           0           0\n",
-            "19260         0         0         0  ...           0           0           0\n",
+            "23411         0         0         0  ...           0           0           0\n",
+            "9613          0         0         0  ...           0           0           0\n",
+            "6491          0         0         0  ...           0           0           0\n",
+            "12035         0         0         0  ...           0           0           0\n",
+            "15242         0         0         0  ...           0           0           0\n",
             "\n",
             "[4800 rows x 784 columns]\n",
-            "Test data Label:  6691     4\n",
-            "12458    3\n",
-            "10359    4\n",
-            "9048     1\n",
-            "6989     2\n",
+            "Test data Label:  12233    2\n",
+            "15590    3\n",
+            "2990     3\n",
+            "22271    4\n",
+            "2656     1\n",
             "        ..\n",
-            "883      4\n",
-            "15084    1\n",
-            "18261    2\n",
-            "18208    1\n",
-            "19260    1\n",
+            "23411    4\n",
+            "9613     2\n",
+            "6491     4\n",
+            "12035    4\n",
+            "15242    3\n",
             "Name: label, Length: 4800, dtype: int64\n"
           ]
         }
@@ -1356,9 +1356,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PCCyJV5WOMyF",
-        "outputId": "e428b40b-94e9-454e-f3d2-e1c6d3df7640"
+        "outputId": "0893482e-8dd0-4fdf-a79b-f5d7c053de57"
       },
-      "execution_count": 42,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
@@ -1368,6 +1368,42 @@
             "Shape of Train data Label:  (19200,)\n",
             "Shape of Test data feature:  (4800, 784)\n",
             "Shape of Test data Label:  (4800,)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Get the unique lable from train and test feature and see if we dont have class imbalance in train and test data\n",
+        "unique, counts = np.unique(y_train, return_counts=True)\n",
+        "print('Train label:\\n', np.asarray((unique, counts)).T)\n",
+        "unique, counts = np.unique(y_test, return_counts=True)\n",
+        "print('Test Label:\\n',np.asarray((unique, counts)).T)"
+      ],
+      "metadata": {
+        "id": "njpnrickSNAw",
+        "outputId": "a57a5cf5-b89a-4535-b12f-a1b7d8d4214b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Train label:\n",
+            " [[   1 4846]\n",
+            " [   2 4776]\n",
+            " [   3 4810]\n",
+            " [   4 4768]]\n",
+            "Test Label:\n",
+            " [[   1 1154]\n",
+            " [   2 1224]\n",
+            " [   3 1190]\n",
+            " [   4 1232]]\n"
           ]
         }
       ]
