--- a/Assignment/AIMLCEP_Q3.ipynb
+++ b/Assignment/AIMLCEP_Q3.ipynb
@@ -1411,7 +1411,7 @@
         "import pandas as pd #the pandas library is useful for data processing \n",
         "import matplotlib.pyplot as plt #the matplotlib library is useful for plotting purposes\n"
       ],
-      "execution_count": 13,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -1441,16 +1441,16 @@
           "height": 478
         },
         "id": "-LPtjcEF7gN8",
-        "outputId": "5cdc6df3-bb08-42b1-ac50-d3e4baacad5b"
+        "outputId": "24855e15-dca7-4c87-c1bf-6c385a1e6d20"
       },
-      "execution_count": 14,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-b72490dc-6415-407f-88f1-53757851e3ff\">\n",
+              "  <div id=\"df-c3c5304a-fe87-4ae3-96d2-d9737a35a39a\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -2482,7 +2482,7 @@
               "</table>\n",
               "<p>24000 rows × 785 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b72490dc-6415-407f-88f1-53757851e3ff')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c3c5304a-fe87-4ae3-96d2-d9737a35a39a')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -2533,12 +2533,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-b72490dc-6415-407f-88f1-53757851e3ff button.colab-df-convert');\n",
+              "          document.querySelector('#df-c3c5304a-fe87-4ae3-96d2-d9737a35a39a button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-b72490dc-6415-407f-88f1-53757851e3ff');\n",
+              "          const element = document.querySelector('#df-c3c5304a-fe87-4ae3-96d2-d9737a35a39a');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -2577,7 +2577,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 3
         }
       ]
     },
@@ -2595,9 +2595,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lRaN4RAYGDiI",
-        "outputId": "3862b087-f7ad-435d-fe7a-cb0af02e1e2f"
+        "outputId": "8edcbaec-d5be-4e0e-e8fb-8b0ab10eae45"
       },
-      "execution_count": 15,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -2650,65 +2650,65 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kZ_S9ZT8DFhi",
-        "outputId": "b0085346-0e5c-4a44-f0b3-71cd2de84981"
+        "outputId": "068fab0f-7aaf-48c7-fae0-3f0fa964e260"
       },
-      "execution_count": 16,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Train data feature:         feature0  feature1  feature2  ...  feature781  feature782  feature783\n",
-            "13245         0         0         0  ...           0           0           0\n",
-            "19172         0         0         0  ...           0           0           0\n",
-            "10574         0         0         0  ...           0           0           0\n",
-            "6007          0         0         0  ...           0           0           0\n",
-            "10621         0         0         0  ...           0           0           0\n",
+            "17735         0         0         0  ...           0           0           0\n",
+            "22144         0         0         0  ...           0           0           0\n",
+            "20443         0         0         0  ...           0           0           0\n",
+            "5900          0         0         0  ...           0           0           0\n",
+            "21133         0         0         0  ...           0           0           0\n",
             "...         ...       ...       ...  ...         ...         ...         ...\n",
-            "12903         0         0         0  ...           0           0           0\n",
-            "15291         0         0         0  ...           0           0           0\n",
-            "9782          0         0         0  ...           0           0           0\n",
-            "3647          0         0         0  ...           0           0           0\n",
-            "15551         0         0         0  ...           0           0           0\n",
+            "5916          0         0         0  ...           0           0           0\n",
+            "3414          0         0         0  ...           0           0           0\n",
+            "13859         0         0         0  ...           0           0           0\n",
+            "10766         0         0         0  ...           0           0           0\n",
+            "10588         0         0         0  ...           0           0           0\n",
             "\n",
             "[19200 rows x 784 columns]\n",
-            "Train data Label:  13245    2\n",
-            "19172    1\n",
-            "10574    3\n",
-            "6007     4\n",
-            "10621    2\n",
+            "Train data Label:  17735    4\n",
+            "22144    1\n",
+            "20443    4\n",
+            "5900     1\n",
+            "21133    2\n",
             "        ..\n",
-            "12903    4\n",
-            "15291    4\n",
-            "9782     3\n",
-            "3647     4\n",
-            "15551    4\n",
+            "5916     1\n",
+            "3414     3\n",
+            "13859    4\n",
+            "10766    3\n",
+            "10588    1\n",
             "Name: label, Length: 19200, dtype: int64\n",
             "Test data feature:         feature0  feature1  feature2  ...  feature781  feature782  feature783\n",
-            "1917          0         0         0  ...           0           0           0\n",
-            "8231          0         0         0  ...           0           0           0\n",
-            "20072         0         0         0  ...           0           0           0\n",
-            "16100         0         0         0  ...           0           0           0\n",
-            "19465         0         0         0  ...           0           0           0\n",
+            "280           0         0         0  ...           0           0           0\n",
+            "11724         0         0         0  ...           0           0           0\n",
+            "9086          0         0         0  ...           0           0           0\n",
+            "5930          0         0         0  ...           0           0           0\n",
+            "4408          0         0         0  ...           0           0           0\n",
             "...         ...       ...       ...  ...         ...         ...         ...\n",
-            "1220          0         0         0  ...           0           0           0\n",
-            "6214          0         0         0  ...           0           0           0\n",
-            "2356          0         0         0  ...           0           0           0\n",
-            "3088          0         0         0  ...           0           0           0\n",
-            "385           0         0         0  ...           0           0           0\n",
+            "6229          0         0         0  ...           0           0           0\n",
+            "12850         0         0         0  ...           0           0           0\n",
+            "18415         0         0         0  ...           0           0           0\n",
+            "21784         0         0         0  ...           0           0           0\n",
+            "13784         0         0         0  ...           0           0           0\n",
             "\n",
             "[4800 rows x 784 columns]\n",
-            "Test data Label:  1917     2\n",
-            "8231     4\n",
-            "20072    1\n",
-            "16100    1\n",
-            "19465    2\n",
+            "Test data Label:  280      1\n",
+            "11724    1\n",
+            "9086     3\n",
+            "5930     3\n",
+            "4408     1\n",
             "        ..\n",
-            "1220     1\n",
-            "6214     3\n",
-            "2356     1\n",
-            "3088     1\n",
-            "385      2\n",
+            "6229     2\n",
+            "12850    3\n",
+            "18415    4\n",
+            "21784    1\n",
+            "13784    1\n",
             "Name: label, Length: 4800, dtype: int64\n"
           ]
         }
@@ -2727,9 +2727,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PCCyJV5WOMyF",
-        "outputId": "e32ef5c6-12b0-4860-99e1-9e4fa62793b7"
+        "outputId": "2f4c81fe-edfd-42a7-e99e-c958590f3149"
       },
-      "execution_count": 17,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -2754,27 +2754,27 @@
       ],
       "metadata": {
         "id": "njpnrickSNAw",
-        "outputId": "7b6d5d74-55b2-4003-a77e-bb9dd20d50ab",
+        "outputId": "ad7ca087-2b78-4e2d-b685-949fb3c468c5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Train label:\n",
-            " [[   1 4788]\n",
-            " [   2 4805]\n",
-            " [   3 4785]\n",
-            " [   4 4822]]\n",
+            " [[   1 4783]\n",
+            " [   2 4834]\n",
+            " [   3 4801]\n",
+            " [   4 4782]]\n",
             "Test Label:\n",
-            " [[   1 1212]\n",
-            " [   2 1195]\n",
-            " [   3 1215]\n",
-            " [   4 1178]]\n"
+            " [[   1 1217]\n",
+            " [   2 1166]\n",
+            " [   3 1199]\n",
+            " [   4 1218]]\n"
           ]
         }
       ]
@@ -2813,17 +2813,180 @@
     {
       "cell_type": "code",
       "source": [
+        "# Import MLPClassifer \n",
+        "from sklearn.neural_network import MLPClassifier\n",
+        "\n",
+        "# Create model object\n",
+        "clf = MLPClassifier(hidden_layer_sizes=(3,3),\n",
+        "                    random_state=5,\n",
+        "                    verbose=True,\n",
+        "                    learning_rate_init=0.01)\n",
+        "\n",
+        "# Fit data onto the model\n",
+        "clf.fit(X_train,y_train)"
+      ],
+      "metadata": {
+        "id": "o79ugKXIXabK",
+        "outputId": "5408b032-706d-4be5-b5ab-5cf6ff6e21f8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Iteration 1, loss = 1.75828543\n",
+            "Iteration 2, loss = 0.97091813\n",
+            "Iteration 3, loss = 0.91463419\n",
+            "Iteration 4, loss = 0.89200699\n",
+            "Iteration 5, loss = 0.87771912\n",
+            "Iteration 6, loss = 0.87348097\n",
+            "Iteration 7, loss = 0.86932858\n",
+            "Iteration 8, loss = 0.86837485\n",
+            "Iteration 9, loss = 0.86354288\n",
+            "Iteration 10, loss = 0.86153298\n",
+            "Iteration 11, loss = 0.86055830\n",
+            "Iteration 12, loss = 0.85927180\n",
+            "Iteration 13, loss = 0.85798441\n",
+            "Iteration 14, loss = 0.85671916\n",
+            "Iteration 15, loss = 0.85738398\n",
+            "Iteration 16, loss = 0.85429282\n",
+            "Iteration 17, loss = 0.85820538\n",
+            "Iteration 18, loss = 0.84909722\n",
+            "Iteration 19, loss = 0.87003379\n",
+            "Iteration 20, loss = 0.84663969\n",
+            "Iteration 21, loss = 0.78498036\n",
+            "Iteration 22, loss = 0.62619555\n",
+            "Iteration 23, loss = 0.65043093\n",
+            "Iteration 24, loss = 0.56043658\n",
+            "Iteration 25, loss = 0.53674582\n",
+            "Iteration 26, loss = 0.51856939\n",
+            "Iteration 27, loss = 0.51981144\n",
+            "Iteration 28, loss = 0.50919890\n",
+            "Iteration 29, loss = 0.49857221\n",
+            "Iteration 30, loss = 0.48585466\n",
+            "Iteration 31, loss = 0.49321772\n",
+            "Iteration 32, loss = 0.46471884\n",
+            "Iteration 33, loss = 0.47177110\n",
+            "Iteration 34, loss = 0.44701321\n",
+            "Iteration 35, loss = 0.45659055\n",
+            "Iteration 36, loss = 0.43036008\n",
+            "Iteration 37, loss = 0.42288517\n",
+            "Iteration 38, loss = 0.42392888\n",
+            "Iteration 39, loss = 0.39813853\n",
+            "Iteration 40, loss = 0.40563555\n",
+            "Iteration 41, loss = 0.40975776\n",
+            "Iteration 42, loss = 0.40651361\n",
+            "Iteration 43, loss = 0.42402776\n",
+            "Iteration 44, loss = 0.39070422\n",
+            "Iteration 45, loss = 0.41024612\n",
+            "Iteration 46, loss = 0.38140125\n",
+            "Iteration 47, loss = 0.36726317\n",
+            "Iteration 48, loss = 0.40657760\n",
+            "Iteration 49, loss = 0.38023501\n",
+            "Iteration 50, loss = 0.37181225\n",
+            "Iteration 51, loss = 0.37166976\n",
+            "Iteration 52, loss = 0.35880044\n",
+            "Iteration 53, loss = 0.38338851\n",
+            "Iteration 54, loss = 0.35866570\n",
+            "Iteration 55, loss = 0.37459557\n",
+            "Iteration 56, loss = 0.37453934\n",
+            "Iteration 57, loss = 0.36904966\n",
+            "Iteration 58, loss = 0.35695653\n",
+            "Iteration 59, loss = 0.36405620\n",
+            "Iteration 60, loss = 0.37986402\n",
+            "Iteration 61, loss = 0.37452434\n",
+            "Iteration 62, loss = 0.36843116\n",
+            "Iteration 63, loss = 0.37595122\n",
+            "Iteration 64, loss = 0.35543371\n",
+            "Iteration 65, loss = 0.35027326\n",
+            "Iteration 66, loss = 0.34908988\n",
+            "Iteration 67, loss = 0.36821345\n",
+            "Iteration 68, loss = 0.34837320\n",
+            "Iteration 69, loss = 0.34667016\n",
+            "Iteration 70, loss = 0.37388812\n",
+            "Iteration 71, loss = 0.35765096\n",
+            "Iteration 72, loss = 0.34866391\n",
+            "Iteration 73, loss = 0.34222582\n",
+            "Iteration 74, loss = 0.33884263\n",
+            "Iteration 75, loss = 0.33264501\n",
+            "Iteration 76, loss = 0.37467550\n",
+            "Iteration 77, loss = 0.34964638\n",
+            "Iteration 78, loss = 0.36233390\n",
+            "Iteration 79, loss = 0.35011829\n",
+            "Iteration 80, loss = 0.34062019\n",
+            "Iteration 81, loss = 0.33622209\n",
+            "Iteration 82, loss = 0.39382051\n",
+            "Iteration 83, loss = 0.35125281\n",
+            "Iteration 84, loss = 0.36116765\n",
+            "Iteration 85, loss = 0.34944728\n",
+            "Iteration 86, loss = 0.34739913\n",
+            "Training loss did not improve more than tol=0.000100 for 10 consecutive epochs. Stopping.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "MLPClassifier(hidden_layer_sizes=(3, 3), learning_rate_init=0.01,\n",
+              "              random_state=5, verbose=True)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Make prediction on test dataset\n",
+        "ypred=clf.predict(X_test)\n",
+        "\n",
+        "# Import accuracy score \n",
+        "from sklearn.metrics import accuracy_score\n",
+        "\n",
+        "# Calcuate accuracy\n",
+        "accuracy_score(y_test,ypred)"
+      ],
+      "metadata": {
+        "id": "bscljfUpX7Tx",
+        "outputId": "ec6711fd-5264-4bdb-a46e-7cebfed6f9bb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.8860416666666666"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import tensorflow as tf\n",
         "X_train=tf.convert_to_tensor(X_train)\n",
         "type(X_train)\n",
         "X_train.shape"
       ],
       "metadata": {
-        "id": "ikM_EdlRu0J-",
-        "outputId": "04f57623-a8ed-4e0b-dc41-77c41c0392c4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ikM_EdlRu0J-",
+        "outputId": "04f57623-a8ed-4e0b-dc41-77c41c0392c4"
       },
       "execution_count": 20,
       "outputs": [
@@ -2843,7 +3006,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "DyYpoaB3ql85",
-        "outputId": "feb756bc-ea70-4a05-ab95-d6c1b9ca999a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 412,
@@ -2893,7 +3055,8 @@
             "d21a631c2eee4575a871585749173502",
             "ab72e89a48bc40529b7cc72d7d85eaf2"
           ]
-        }
+        },
+        "outputId": "feb756bc-ea70-4a05-ab95-d6c1b9ca999a"
       },
       "source": [
         "from torchvision import datasets\n",
@@ -3316,11 +3479,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "_03pT7uUYtzA",
-        "outputId": "e796c196-90c4-4b9a-9cd9-0d23e2368987",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 212
-        }
+        },
+        "outputId": "e796c196-90c4-4b9a-9cd9-0d23e2368987"
       },
       "source": [
         "# how many samples per batch to load\n",
